--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
 }
 body{
     margin:0;
-    padding:20px;
+    padding:40px;
     background-color:#FAFAFA;
     color:#424242;
     font-family:'Kpwb','Noto Serif TC';
@@ -31,10 +31,12 @@ pre{
 .showing:hover{
     color:#50C896:
 }
-.showing:hover+.showed{
+.showing:hover+.box>.showed{
     display:block;
-    position:absolute;
-    background-color:#FAFAFA;
+    position:relative;
+    top:15px;
+    left:0;
+    background-color:#FAFAFAC8;
     padding:5px;
     font-size:14px;
     color:#505050;
@@ -47,10 +49,15 @@ pre{
 .showed:hover{
     display:block;
     position:absolute;
+    top:15px;
+    left:0;
     background-color:#FAFAFA;
     padding:5px;
     font-size:14px;
     color:#505050;
     border-radius:5px;
     box-shadow:2px 2px 4px #42424242;
+}
+.box{
+    position:absolute;
 }
