--- a/index.css
+++ b/index.css
@@ -28,10 +28,10 @@ pre{
 .showing{
     color:#424242:
 }
-.showing:hover{
-    color:#50C896:
+.showing:hover,.showing:focus{
+    color:#50C896;
 }
-.showing:hover+.box>.showed{
+.showing:hover,.showing:focus+.box>.showed{
     display:block;
     position:relative;
     top:15px;
